Fix issue with first swimlane not showing up after Jira changed style to have first header frozen

--- a/Stylish.css
+++ b/Stylish.css
@@ -243,9 +243,10 @@ body#jira.ghx-sprint-support:not(.ghx-mode-planning) .ghx-type,
 
 
 /* Hides top column headers (since they'll be inside swimlanes) */
-#jira.ghx-sprint-support #ghx-column-header-group {
+/*#jira.ghx-sprint-support #ghx-column-header-group {
     display: none;
 }
+*/
 
 #jira.ghx-sprint-support #ghx-pool {
     padding-left: 0;
